--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>Hi, my name is Deneva Widyaningtyas
+										<p>Hi, my name is Deneva Widyaningtyas.
 											I'm a fresh graduate of Geological Engineering major, and recently I'm eager to learn about Data Science fields. Although my background is not IT, statistics, or math, I have a strong passion to continue learning outside of my field of study and deepen this data field. After graduate, I joined some data science bootcamp, and also did self-learning through several online platforms.
-											I'm really still a beginner, so I'm asking for corrections and suggestions for each project that I include in this portfolio, which is my first works ✌🏻😁</p>
+											I'm really still a beginner, so I'm asking for corrections and suggestions for each project that I include in this portfolio, which is my first works😊</p>
 									</div>
 								</div>
 							</section>
